<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="21sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/black"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_name"
            android:textSize="18sp"
            android:textColor="@color/black"></TextView>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name_hint"
            android:inputType="text"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_lastname"
            android:textSize="18sp"
            android:textColor="@color/black"></TextView>

        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_lastname_hint"
            android:inputType="text"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_email"
            android:textSize="18sp"
            android:textColor="@color/black"></TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_pass"
            android:textSize="18sp"
            android:textColor="@color/black"></TextView>

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_pass_hint"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendFeedback"
            android:text="@string/form_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

</LinearLayout>

</ScrollView>